# hphp

./: .gitignore  LICENSE  README.md  dvc.yaml  main.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
nbs/: main.ipynb
nbs/data_exploration/: main.ipynb
src/: __init__.py  birth_death.py  simulation.py
src/hphp/: __init__.py  analytical.py  birth_death.py  individual.py  simulation.py
tests/: test_analytical.py  test_simulation.py  test_src.py
tex/: bibliography.bib  main.tex
tex/figures/figure_1/: main.tex
tex/figures/figure_1/flowchart/: main.tex
tex/figures/figure_1/panel_a/: main.tex
tex/figures/figure_2/: main.py
tex/figures/figure_3/: main.py
tex/figures/figure_4/: main.py
tex/figures/figure_4/data/: jobs.py  jobs.txt  main.py  raw.dvc
