[project]
name = "hphp"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "dvc[ssh]>=3.0",
    "nbval>=0.11.0",
    "pytest>=9.0.2",
    "ruff>=0.9.0",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ty]
